<resources>
    <string name="app_name">Tasks Scheduling</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="desc">Task Description</string>
    <string name="name">Task Name</string>
    <string name="add">Add</string>
    <string name="add_task">Add Task</string>
    <string name="show">Show All Tasks</string>
    <string name="delete">Delete Task</string>
    <string name="deleteAll">Delete All Tasks</string>
    <string name="ok">Ok</string>
    <string name="id">Id</string>
    <string name="showTask">Show Task</string>
    <string name="update">Update Task</string>
    <string name="show_Task">Show Task</string>
</resources>