<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#95a5a6"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/addTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/showAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/deleteAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteAll"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/showTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/showTask"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>